--- a/wp-content/themes/cocoon-child-master/scss/lp/components/_page-hero.scss
+++ b/wp-content/themes/cocoon-child-master/scss/lp/components/_page-hero.scss
@@ -26,7 +26,7 @@
 .lp-page-hero__inner {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 40px;
+  padding: 0;
   width: 100%;
 }
 
