--- a/wp-content/themes/cocoon-child-master/scss/lp/components/_step-card.scss
+++ b/wp-content/themes/cocoon-child-master/scss/lp/components/_step-card.scss
@@ -21,12 +21,19 @@
 }
 
 .lp-steps__connector {
+  display: block;
   align-self: center;
   flex-shrink: 0;
   width: 24px;
 
+  // rotateは要素の見た目だけを回転させ、レイアウト上の占有幅は回転前の値のまま
+  // なので、width:16pxのまま回転させると実際の表示幅（元の高さ38px相当）が
+  // 確保領域からはみ出しiPhoneなどでは隣接要素に隠れて切れて見える。
+  // 正方形の枠にしてobject-fit:containで収めれば、回転しても占有領域が変わらない
   @include m.sp {
-    width: 16px;
+    width: 38px;
+    height: 38px;
+    object-fit: contain;
     transform: rotate(90deg);
   }
 }
